example/intel/example1/logs.txt
example1/example1.c:8:7: error: cannot initialize a variable of type 'int *' with an rvalue of type 'char *'
        int *b = (char *) a;
             ^   ~~~~~~~~~~
example1/example1.c:20:6: error: assigning to 'int *' from incompatible type 'char *'
        b = test(a);    
            ^~~~~~~
2 errors generated.
HLS FPGA Parse FAILED.
